--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;    
-  background-color: #3aaccb;
+  background-color: #9297C4;
   min-height: 100vh;
   width: 100%;
 }
@@ -26,19 +26,19 @@ body{
   position: relative;
 }
 .heading-txt{
-  color:white;
+  color:rgb(204, 201, 201);
   font-size: 30px;
   font-weight: bold;
   margin: 10px;
   text-align: center;  
   text-transform: uppercase;
 }
-.question{
-  margin:8px;
+.question {
+  margin: 8px;
   box-shadow: 0px 0px 10px 1px #a2a3a3;
   border-radius: 5px;
-  padding:5px;
-  font-size: large;
+  padding: 15px; 
+  font-size: 18px; 
   font-weight: 600;
   font-family: 'Times New Roman', Times, serif;
   min-width: 100%;
@@ -46,6 +46,14 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #ffffff; 
+  color: #333; 
+  transition: background-color 0.3s ease; 
+  border: 2px solid #a2a3a3;
+}
+
+.question:hover {
+  background-color: #f0f0f0; 
 }
 #question-number{
   margin-right: 5px;
@@ -79,24 +87,20 @@ body{
   transition: 0.3s;
   margin: 5px;
   min-height: 30px;
-  background-color: white;
+  background-color: rgb(234, 230, 230);
 }
 
-.checked{
-  background-color: rgb(179, 83, 179);
-  color:white;
-  box-shadow: 3px 3px 4px 1px rgb(78, 69, 78);
-}
 .option-btn:hover{
-  background-color: rgb(212, 118, 212);
-  color:white;
+  background-color: #0c5f5b;
+  color:rgb(204, 201, 201);
+  cursor: pointer;
 }
-#next-button{
+#button{
   padding:10px;
   border:none;
   background-color: purple;
   background-color: #276272;
-  color:white;
+  color:rgb(204, 201, 201);
   border-radius: 5px;
   box-shadow: 3px 3px 2px 1px rgb(127, 109, 109);
   font-size: larger;
@@ -107,7 +111,7 @@ body{
   position: absolute;
   bottom: 15px;
 }
-#next-button:active{
+#button:active{
   box-shadow:none;    
 }
 .show-score{
@@ -115,4 +119,9 @@ body{
   top:30%;
   font-size: 40px;
   text-align: center;  
+}
+
+
+.body-color-toggled {
+  background-color: white;
 }
