--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,17 @@
   padding:0;
   box-sizing: border-box;
 }
-body{
+body {
   display: flex;
   align-items: center;
-  justify-content: center;    
-  background-color: #9297C4;
+  justify-content: center;
+  background-size: cover;
   min-height: 100vh;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #276272;
 }
 
 .container {
