--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,10 @@ body {
   width: 400px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
-  box-shadow: 2px 2px 10px 1px #333;  
+  box-shadow: 2px 2px 5px 1px #333;  
   overflow: hidden;
   padding: 10px;
   position: relative; 
-
 
 }
 .heading-txt{
@@ -122,13 +121,9 @@ body {
   box-shadow:none;    
 }
 .show-score{
+  color: #DFE1F3;
   position: absolute;
   top:30%;
   font-size: 40px;
   text-align: center;  
-}
-
-
-.body-color-toggled {
-  background-color: white;
 }
