--- a/src/App.css
+++ b/src/App.css
@@ -23,18 +23,18 @@ body {
   flex-direction: column;
   min-height: 400px;
   width: 400px;
-  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
   box-shadow: 2px 2px 5px 1px #333;  
   overflow: hidden;
   padding: 10px;
   position: relative; 
+  background-image: url(./Assets/bgimgdark.png);
 
 }
 .heading-txt{
   color:rgb(204, 201, 201);
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 900;
   margin: 10px;
   text-align: center;  
   text-transform: uppercase;
@@ -83,7 +83,6 @@ body {
   left: 225px;
 }
 
-
 .option-btn{
   box-shadow: 0px 0px 4px 1px rgb(128, 123, 123);
   padding: 5px;
@@ -104,7 +103,6 @@ body {
 #button{
   padding:10px;
   border:none;
-  background-color: purple;
   background-color: #276272;
   color:rgb(204, 201, 201);
   border-radius: 5px;
@@ -116,6 +114,7 @@ body {
   width:100px;
   position: absolute;
   bottom: 15px;
+  cursor: pointer;
 }
 #button:active{
   box-shadow:none;    
@@ -125,5 +124,15 @@ body {
   position: absolute;
   top:30%;
   font-size: 40px;
+  font-weight: 900;
   text-align: center;  
 }
+
+.ChangeBackground-Btn{
+  position: absolute;
+  top: 5%;
+  right: 8%;
+  height: 60px;
+  width: 100px;
+}
+
